feat: Implement core Angular application structure with a responsive navbar and global styling.

--- a/src/app/shared/layout/navbar/navbar.html
+++ b/src/app/shared/layout/navbar/navbar.html
@@ -1,1 +1,27 @@
-<p>navbar works!</p>
+<!-- shared/layout/navbar/navbar.component.html -->
+ <header class="navbar">
+    <div class="navbar__start">
+        <div class="navbar__logo">
+            <span class="navbar__logo__icon"></span>
+            <span class="navbar__logo__text"></span>
+        </div>
+        <nav class="navbar__links">
+            <!-- <a routerLink="/">Home</a> -->
+            <a routerLink="/catalog">Catalog</a>
+            <a href="#collections">Collections</a>
+            <a href="#about-us">About Us</a>
+            <a href="#blog">Blog</a>
+        </nav>
+        <div class="navbar__toggle">
+            <img src="" alt="">
+        </div>
+    </div>
+    <div class="navbar__end">
+        <div class="navbar__end__search">
+            <input type="text" placeholder="Search">
+        </div>
+        <div class="navbar__end__cart">
+            <img src="" alt="">
+        </div>
+    </div>
+ </header>
