--- a/src/app/app.html
+++ b/src/app/app.html
@@ -338,5 +338,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-navbar></app-navbar>
 <router-outlet />
