--- a/src/app/shared/layout/navbar/navbar.html
+++ b/src/app/shared/layout/navbar/navbar.html
@@ -1,27 +1,125 @@
 <!-- shared/layout/navbar/navbar.component.html -->
- <header class="navbar">
-    <div class="navbar__start">
-        <div class="navbar__logo">
-            <span class="navbar__logo__icon"></span>
-            <span class="navbar__logo__text"></span>
-        </div>
-        <nav class="navbar__links">
-            <!-- <a routerLink="/">Home</a> -->
-            <a routerLink="/catalog">Catalog</a>
-            <a href="#collections">Collections</a>
-            <a href="#about-us">About Us</a>
-            <a href="#blog">Blog</a>
-        </nav>
-        <div class="navbar__toggle">
-            <img src="" alt="">
-        </div>
+<header class="navbar">
+  <div class="navbar__start">
+    <div class="navbar__logo">
+      <span class="navbar__logo__icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" fill="none">
+          <g clip-path="url(#clip0_430_14)">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M2.4901 8.47719C3.10363 6.42023 3.07349 4.91243 2.4901 1.78321C2.41939 1.8421 2.34943 1.90506 2.27939 1.97233C2.0421 2.22115 1.8453 2.45517 1.68316 2.68705C1.10538 3.51335 0.96764 4.31248 1.00595 5.65744C1.13137 6.43347 1.2461 6.88554 1.68316 7.50486C1.87814 7.78115 2.13726 8.09072 2.4901 8.47719Z"
+              fill="currentColor"
+            />
+            <path
+              d="M7.51974 14L12.9067 8.22438C13.6113 7.37523 14.0411 6.43225 13.9969 5.16155C13.9583 4.07985 13.7923 3.50563 13.1632 2.55572C12.1973 1.41363 11.4936 1.12272 10.0849 1.11668C9.25009 1.18675 8.79006 1.50953 7.85609 2.55572C7.76411 2.65875 7.66753 2.7688 7.56555 2.88631C7.56555 2.88631 6.71353 3.89753 5.63248 4.99626C4.55143 6.09499 5.63248 1 5.63248 1C5.22207 1.00387 4.86579 1.01797 4.55143 1.04569C4.44265 1.05529 4.33888 1.06651 4.23963 1.07951C4.05404 1.10382 3.88423 1.13432 3.72689 1.17194C3.59851 1.20264 3.47843 1.23809 3.36487 1.27877C3.03252 1.39784 2.75594 1.5618 2.4901 1.78321C3.07349 4.91243 3.10363 6.42023 2.4901 8.47719L3.36487 9.45924L3.80225 9.95026L4.23963 10.4413L5.63248 11.9484C5.63248 11.9484 3.80225 5.53104 5.63248 7.34929C7.46271 9.16754 7.75793 9.819 7.75793 9.819L8.88773 8.62615L9.62851 7.84403L7.51974 5.60595L9.21782 3.81002C9.21782 3.81002 9.59344 3.40074 10.2164 3.39192C10.8394 3.38311 11.2333 3.81002 11.2333 3.81002C11.5073 4.08116 11.6783 4.3706 11.7189 4.89903C11.7142 5.41694 11.6034 5.6887 11.2851 6.09499L9.62851 7.84403L8.88773 8.62615L7.75793 9.819L6.56694 11.0927L5.69584 12.0173L6.57611 12.9742L7.51974 14Z"
+              fill="currentColor"
+            />
+            <path
+              d="M11.2851 6.09499C11.6034 5.6887 11.7142 5.41694 11.7189 4.89903C11.6783 4.3706 11.5073 4.08116 11.2333 3.81002C11.2333 3.81002 10.8394 3.38311 10.2164 3.39192C9.59344 3.40074 9.21782 3.81002 9.21782 3.81002L7.51974 5.60595L9.62851 7.84403L11.2851 6.09499Z"
+              fill="currentColor"
+            />
+            <path
+              d="M5.63248 4.99626C6.71353 3.89753 7.56555 2.88631 7.56555 2.88631C7.66753 2.7688 7.76411 2.65875 7.85609 2.55572C7.21413 1.45867 6.7338 1.10321 5.63248 1C5.63248 1 4.55143 6.09499 5.63248 4.99626Z"
+              fill="currentColor"
+            />
+            <path
+              d="M5.63248 7.34929C3.80225 5.53104 5.63248 11.9484 5.63248 11.9484L5.69584 12.0173L6.56694 11.0927L7.75793 9.819C7.75793 9.819 7.46271 9.16754 5.63248 7.34929Z"
+              fill="currentColor"
+            />
+            <path
+              class="navbar__logo__icon--stroke"
+              d="M5.63248 1C5.22207 1.00387 4.86579 1.01797 4.55143 1.04569C4.44265 1.05529 4.33888 1.06651 4.23963 1.07951C4.05404 1.10382 3.88423 1.13432 3.72689 1.17194C3.59851 1.20264 3.47843 1.23809 3.36487 1.27877C3.03252 1.39784 2.75594 1.5618 2.4901 1.78321M5.63248 1C6.7338 1.10321 7.21413 1.45867 7.85609 2.55572M5.63248 1C5.63248 1 4.55143 6.09499 5.63248 4.99626C6.71353 3.89753 7.56555 2.88631 7.56555 2.88631C7.66753 2.7688 7.76411 2.65875 7.85609 2.55572M2.4901 8.47719L3.36487 9.45924L3.80225 9.95026L4.23963 10.4413L5.63248 11.9484M2.4901 8.47719C2.13726 8.09072 1.87814 7.78115 1.68316 7.50486C1.2461 6.88554 1.13137 6.43347 1.00595 5.65744C0.96764 4.31248 1.10538 3.51335 1.68316 2.68705C1.8453 2.45517 2.0421 2.22115 2.27939 1.97233C2.34943 1.90506 2.41939 1.8421 2.4901 1.78321M2.4901 8.47719C3.10363 6.42023 3.07349 4.91243 2.4901 1.78321M5.63248 11.9484C5.63248 11.9484 3.80225 5.53104 5.63248 7.34929C7.46271 9.16754 7.75793 9.819 7.75793 9.819M5.63248 11.9484L5.69584 12.0173M7.75793 9.819L6.56694 11.0927L5.69584 12.0173M7.75793 9.819L8.88773 8.62615M8.67408 8.3994L8.88773 8.62615M5.69584 12.0173L6.57611 12.9742L7.51974 14L12.9067 8.22438C13.6113 7.37523 14.0411 6.43225 13.9969 5.16155C13.9583 4.07985 13.7923 3.50563 13.1632 2.55572C12.1973 1.41363 11.4936 1.12272 10.0849 1.11668C9.25009 1.18675 8.79006 1.50953 7.85609 2.55572M8.88773 8.62615L9.62851 7.84403M9.62851 7.84403L11.2851 6.09499C11.6034 5.6887 11.7142 5.41694 11.7189 4.89903C11.6783 4.3706 11.5073 4.08116 11.2333 3.81002C11.2333 3.81002 10.8394 3.38311 10.2164 3.39192C9.59344 3.40074 9.21782 3.81002 9.21782 3.81002L7.51974 5.60595L9.62851 7.84403Z"
+              stroke="currentColor"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_430_14">
+              <rect width="15" height="15" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+      </span>
+      <div class="navbar__logo__label">
+        <span>Home</span>
+        <span>Fjord</span>
+      </div>
     </div>
-    <div class="navbar__end">
-        <div class="navbar__end__search">
-            <input type="text" placeholder="Search">
+    <nav class="navbar__links">
+      <!-- <a routerLink="/">Home</a> -->
+      <a routerLink="/catalog" class="navbar__links__item">
+        <div class="navbar__links__text">
+          <span>Shop</span>
+          <span>Shop</span>
         </div>
-        <div class="navbar__end__cart">
-            <img src="" alt="">
+      </a>
+      <a href="#collections" class="navbar__links__item">
+        <div class="navbar__links__text">
+          <span>Collections</span>
+          <span>Collections</span>
         </div>
+        <span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 256 256"
+            focusable="false"
+            color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
+            style="
+              user-select: none;
+              width: 100%;
+              height: 100%;
+              display: inline-block;
+              fill: var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17));
+              color: var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17));
+              flex-shrink: 0;
+            "
+          >
+            <g
+              color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
+              weight="regular"
+            >
+              <path
+                d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
+              ></path>
+            </g>
+          </svg>
+        </span>
+      </a>
+      <a href="#about-us" class="navbar__links__item">
+        <div class="navbar__links__text">
+          <span>About</span>
+          <span>About</span>
+        </div>
+        <span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
+            <g
+              color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
+              weight="regular"
+            >
+              <path
+                d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
+              ></path>
+            </g>
+          </svg>
+        </span>
+      </a>
+      <a href="#blog" class="navbar__links__item">
+        <div class="navbar__links__text">
+          <span>Blog</span>
+          <span>Blog</span>
+        </div>
+      </a>
+    </nav>
+    <div class="navbar__toggle">
+      <span class="navbar__toggle__circle"></span>
     </div>
- </header>
+  </div>
+  <div class="navbar__end">
+    <div class="navbar__end__search">
+      <input type="text" placeholder="Search" />
+    </div>
+    <div class="navbar__end__cart">
+      <img src="" alt="" />
+    </div>
+  </div>
+</header>
