--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
     --font-weight: 400;
     --font-style: normal;
     --font-optical-sizing: auto;
+    --line-height: 120%;
 }
 
 * {
@@ -15,6 +16,7 @@
     font-weight: var(--font-weight);
     font-style: var(--font-style);
     font-optical-sizing: var(--font-optical-sizing);
+    line-height: var(--line-height);
 }
 
 body {
