--- a/src/app/shared/layout/navbar/navbar.html
+++ b/src/app/shared/layout/navbar/navbar.html
@@ -63,19 +63,9 @@
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 256 256"
             focusable="false"
-            color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
-            style="
-              user-select: none;
-              width: 100%;
-              height: 100%;
-              display: inline-block;
-              fill: var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17));
-              color: var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17));
-              flex-shrink: 0;
-            "
           >
             <g
-              color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
+              color="currentColor"
               weight="regular"
             >
               <path
@@ -93,7 +83,7 @@
         <span>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false">
             <g
-              color="var(--token-c5c4fdcb-9482-48bb-aedf-353188472aae, rgb(14, 16, 17))"
+              color="currentColor"
               weight="regular"
             >
               <path
@@ -110,8 +100,8 @@
         </div>
       </a>
     </nav>
-    <div class="navbar__toggle">
-      <span class="navbar__toggle__circle"></span>
+    <div class="navbar__toggle" (click)="toggleTheme()">
+      <span class="navbar__toggle__circle" [class.active]="isDarkMode"></span>
     </div>
   </div>
   <div class="navbar__end">
