feat: add markup, styles and animation for announcement bar component

--- a/src/app/shared/layout/announcement-bar/announcement-bar.html
+++ b/src/app/shared/layout/announcement-bar/announcement-bar.html
@@ -1,1 +1,50 @@
-<p>announcement-bar works!</p>
+<div class="announcement-bar">
+  <div
+    class="announcement-bar__marquee"
+    (mouseenter)="onMarqueeEnter()"
+    (mouseleave)="onMarqueeLeave()"
+  >
+    <ul class="announcement-bar__marquee__list" #marqueeList>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+      <li>Save 20% on your first order</li>
+      <li>-</li>
+    </ul>
+  </div>
+</div>
