feat: add announcement bar component, global styles, and initial app shell

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -337,6 +337,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-announcement-bar></app-announcement-bar>
 <app-navbar></app-navbar>
 <router-outlet />
