--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<section class="home">
+    <app-announcement-bar></app-announcement-bar>
+    <app-hero>
+        <app-navbar></app-navbar>
+    </app-hero>
+</section>
