feat: add svg sprite and features-bar component

--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -4,3 +4,6 @@
         <app-navbar></app-navbar>
     </app-hero>
 </section>
+<section class="features">
+    <app-features-bar></app-features-bar>
+</section>
