--- a/src/app/features/home/pages/home-page/home-page.css
+++ b/src/app/features/home/pages/home-page/home-page.css
@@ -3,3 +3,6 @@
 .home {
     @apply flex flex-col h-[calc(100vh-12px)] w-full py-3 gap-3;
 }
+.features {
+    @apply flex flex-col h-min w-full;
+}
