--- a/src/app/features/home/components/our-favourites/our-favourites.html
+++ b/src/app/features/home/components/our-favourites/our-favourites.html
@@ -1,1 +1,45 @@
-<p>our-favourites works!</p>
+<div class="our-favourites">
+    <header class="our-favourites__header">
+        <h2 class="our-favourites__title">Our Favourites</h2>
+    </header>
+    <!-- <div class="our-favourites__products">
+        @for(product of products; track $index) {
+            <app-product-card [product]="product"></app-product-card>
+        }
+
+    </div> -->
+    <div class="our-favourites__slider">
+        <button
+            type="button"
+            class="our-favourites__slider-btn our-favourites__slider-btn--prev"
+            (click)="prevSlide()"
+            aria-label="Previous slide"
+        >
+            <span class="our-favourites__slider-btn-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title xmlns="">arrow-back-ios-new</title><path fill="currentColor" d="M16 22L6 12L16 2l1.775 1.775L9.55 12l8.225 8.225z"/></svg>
+            </span>
+        </button>
+        <ul
+            #sliderTrack
+            class="our-favourites__products-track"
+        >
+            @for(product of products; track $index){
+                <li
+                    class="our-favourites__products-item"
+                >
+                    <app-product-card [product]="product"></app-product-card>
+                </li>    
+            }
+        </ul>
+        <button
+            type="button"
+            class="our-favourites__slider-btn our-favourites__slider-btn--next"
+            (click)="nextSlide()"
+            aria-label="Next slide"
+        >
+            <span class="our-favourites__slider-btn-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title xmlns="">arrow-forward-ios</title><path fill="currentColor" d="M8.025 22L6.25 20.225L14.475 12L6.25 3.775L8.025 2l10 10z"/></svg>
+            </span>
+        </button>
+    </div>
+</div>
