--- a/src/app/shared/layout/features-bar/features-bar.html
+++ b/src/app/shared/layout/features-bar/features-bar.html
@@ -1,17 +1,12 @@
 <div class="features-bar">
-    <div
-        *ngFor="let feature of features"
-        class="feature-bar__item"
-    >
-        <span class="feature-bar__item-icon">
-            <!-- Ejemplo usando icon font; cambia por tu sistema de iconos -->
-            <svg class="feature-bar__item-icon-svg">
-                <use [attr.xlink:href]="feature.icon"></use>
-            </svg>
-            <!-- <span class="material-symbols-outlined text-xs">
-                {{ feature.icon }}
-            </span> -->
-        </span>
-        <span class="feature-bar__item-label">{{ feature.label }}</span>
-    </div>
+    @for(feature of features; track $index) {
+        <div class="feature-bar__item">
+            <span class="feature-bar__item-icon">
+                <svg class="feature-bar__item-icon-svg">
+                    <use [attr.xlink:href]="feature.icon"></use>
+                </svg>
+            </span>
+            <span class="feature-bar__item-label">{{ feature.label }}</span>
+        </div>
+    }
 </div>
